persist with retry